[tool.poetry]
name = "ska-csp-simulators"
version = "0.3.1"
description = "SKA CSP Simulators"
authors = ["Elisabetta Giani <elisabetta.giani@inaf.it>"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_csp_simulators", from = "src" }
]

[tool.poetry.scripts]
MidCbfCtrlSimulator = 'ska_csp_simulators.mid.mid_cbf_ctrl_simulator:main'
MidCbfSubarraySimulator = 'ska_csp_simulators.mid.mid_cbf_subarray_simulator:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
debugpy = "^1.5.1"
numpy = "^1.26.1"
pytango = "9.5.0"
ska-k8s-config-exporter = "^0.0.4"
ska-tango-base = "^0.20.1"
attrs = "^23.2.0"
referencing = "^0.35.1"
rpds = "^1.7.1"
rpds-py = "^0.18.0"
jsonschema-specifications = "^2023.12.1"

[tool.poetry.group.dev.dependencies]
pytango = "9.5.0"
black = "^22.3.0"
coverage = "^6.1.1"
flake8 = "^3.9.2"
isort = "^5.6.4"
pylint = "^2.8.2"
pylint-junit = "^0.3.2"
pytest = "^8.1.1"
pytest-bdd = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.10.0"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.0.1"
yamllint = "^1.32.0"
ska-tango-testing = "^0.6.1"

[tool.poetry.group.docs.dependencies]
myst-parser = "^2.0.0"
ska-ser-sphinx-theme = "^0.1.1"
Sphinx = "^6"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
